Align date and author name issue fix

--- a/web/wp-content/themes/lf-theme/source/scss/components/_single.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_single.scss
@@ -31,6 +31,7 @@
 .date-author-row {
     display: flex;
     flex-direction: row;
+    align-items: baseline;
 
     .author-name {
         margin-left: 1em;
